--- a/client/src/CSS-Components/Products.css
+++ b/client/src/CSS-Components/Products.css
@@ -13,6 +13,7 @@ flex-wrap: wrap;
     width: 250px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -51,3 +52,5 @@ flex-wrap: wrap;
   .out-of-stock {
     color: red;
   }
+
+ 
