--- a/client/src/CSS-Components/Home.css
+++ b/client/src/CSS-Components/Home.css
@@ -57,7 +57,7 @@ display: flex;
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     transition: transform 0.2s;
   }
@@ -68,6 +68,7 @@ display: flex;
   
   .shop-button {
     display: inline-block;
+    width: 20px;
     background-color: #007bff;
     color: #fff;
     padding: 8px 16px;
