--- a/client/src/CSS-Components/ViewCart.css
+++ b/client/src/CSS-Components/ViewCart.css
@@ -33,13 +33,14 @@
   
   .cart-item {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     margin-bottom: 10px;
     padding: 10px;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
+    flex-wrap: wrap;
   }
   
   .cart-item h3 {
