--- a/client/src/CSS-Components/ViewCart.css
+++ b/client/src/CSS-Components/ViewCart.css
@@ -15,6 +15,8 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
   }
   
   h1 {
