--- a/client/src/CSS-Components/Home.css
+++ b/client/src/CSS-Components/Home.css
@@ -73,11 +73,14 @@ display: flex;
     justify-content: space-around;
     align-items: center;
     transition: transform 0.2s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
     
   }
   
   .category-card:hover {
     transform: scale(1.05); /* Add a hover effect to scale the card on hover */
+    
   }
   
   .shop-button {
@@ -111,4 +114,12 @@ display: flex;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Adjust the last value (0.5) for opacity */
     z-index: -1; /* Place the overlay behind the content */
+  }
+
+
+  /* Style the paragraph text */
+  .welcome-container p {
+    font-size: 16px; /* Adjust the font size as needed */
+    color: #555; /* Set the text color */
+    line-height: 1.5; /* Adjust line height for readability */
   }
