--- a/client/src/CSS-Components/Products.css
+++ b/client/src/CSS-Components/Products.css
@@ -4,10 +4,12 @@
 
 display: flex;
 flex-wrap: wrap;
+margin-top: 40%
+
 }
 
 .product-card {
-    border: 1px solid #ddd;
+    /* border: 1px solid #ddd;
     padding: 10px;
     margin: 10px;
     width: 250px;
@@ -16,12 +18,30 @@ flex-wrap: wrap;
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    text-align: center; */
+
+    background-color: rgba(51, 51, 51, 0.2);
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 28px;
+    margin: 65px;
+    width: 300px; /* Increase the width as desired */
+    height: 425px; /* Increase the height as desired */
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    
+    transition: transform 0.2s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
   }
   
   .product-image {
-    width: 100%;
-    max-height: 200px;
+    /* width: 100%; */
+    
+    max-height: 230px;
     object-fit: cover;
   }
   
